2004-04-30	blytkerchan	repairing compilation :)
	* Makefile.am [SUBDIRS]: move libmemory before local
	[libcontain_la_LIBADD]: add libmemory
	* array.c: include increment.h and decrement.h from architecture-specific code
	(array_put): add missing semicolon
	(array_push_back): ditto
	(array_resize): use n_size in stead of size to allocate the new nodes
	remove unused variable exp
	cast n_size to pointer in compare_and_exchange call
	(array_copy): repair call to array_put
	(array_search): define size variable
	repaire type-o
	(array_deep_copy): define val variable
	repair call to array_put
	* configure.in: find pthread_setspecific function in pthread library

2004-04-29	blytkerchan	using libmemory in array implementation
	* how_arrays_work: new file
	* thread.h: ditto
	* libcontain_config.h: ditto
	* array.c: include libmemory header files
	(array_get): rewrite to use hazard pointers and atomic actions (where applicable)
	(array_put): ditto
	(array_push_back): ditto
	(array_resize): ditto
	(array_merge): ditto
	(array_condense): ditto
	(array_sort): ditto
	(array_search): ditto
	(array_default_increase): ditto
	(array_deep_copy): ditto
	(array_foreach): ditto
	(array_copy): ditto
	(array_get_size): rewrite to handle size temporarily being 0
	(array_binary_search): re-format leading comment
	(array_merge2): re-format function parameters
	* array.h [array_t]: add flag attribute
	* array.sgml: update regarding thread-safety
	
2004-04-28	blytkerchan
	* Makefile.am [SUBDIRS]: add libmemory (both instances)
	[libcontain_la_SOURCES]: add binary.c
	[noinst_HEADERS]: add binary.h
	* binary.c: include sys/types.h and binary.h
	* bootstrap: bootstrap libmemory if it's there
	* configure.in: configure libmemory

2004-04-27	blytkerchan
	* binary.c: new file
	* binary.h: ditto
	* how_heaps_work: ditto
	* array.c [pow2s]: move to binary.c
	(lg): ditto
	(pow2): ditto
	* heap.c: include license
	include stdlib.h
	[heap_left_child]: remove
	[heap_right_child]: ditto